// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a Tab 1`] = `
<Tab
  controlled={true}
  direction="right"
  disabled={true}
  focus={false}
  hidden={false}
  href={
    Object {
      "selectHandler": [MockFunction],
    }
  }
  location="none"
  minWidth="120px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={true}
/>
`;

exports[`Test making a Tab invisible 1`] = `
<Tab
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  location="none"
  minWidth="120px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={false}
/>
`;

exports[`Test retrieval of Tab props object 1`] = `
Object {
  "controlled": true,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "hidden": false,
  "href": Object {
    "selectHandler": [Function],
  },
  "location": "none",
  "minWidth": "120px",
  "noborder": false,
  "noclose": false,
  "noedit": false,
  "nohover": false,
  "nopropagation": false,
  "notheme": false,
  "notooltip": false,
  "obj": "Tab",
  "onClick": [Function],
  "onClose": [Function],
  "orientation": "top",
  "ripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "title": "",
  "visible": true,
}
`;

exports[`Test retrieval of Tab props object 2`] = `
Object {
  "children": null,
  "sizing": "normal",
  "style": Object {},
  "visible": true,
}
`;

exports[`Test the click handler in the Tab instance 1`] = `
<Tab
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  href={
    Object {
      "selectHandler": [MockFunction],
    }
  }
  location="none"
  minWidth="120px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  orientation="top"
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={true}
/>
`;

exports[`Test the close click handler on a Tab instance 1`] = `
<Tab
  controlled={true}
  direction="right"
  disabled={false}
  focus={false}
  hidden={false}
  href={
    Object {
      "hiddenTabHandler": [MockFunction],
    }
  }
  location="none"
  minWidth="120px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[MockFunction]}
  orientation="top"
  ripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="tab title"
  visible={true}
/>
`;

exports[`Test the creation of a Tab instance 1`] = `
<Wrapper
  backgroundColor={null}
  border={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  controlled={true}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  hidden={false}
  href={
    Object {
      "selectHandler": [Function],
    }
  }
  id={null}
  left={null}
  location="none"
  maxHeight={null}
  maxWidth={null}
  minHeight={null}
  minWidth="120px"
  noborder={false}
  noclose={false}
  noedit={false}
  nohover={false}
  nopropagation={false}
  notheme={false}
  notooltip={false}
  obj="Tab"
  onClick={[Function]}
  onClose={[Function]}
  onError={[Function]}
  orientation="top"
  padding={null}
  reset={false}
  ripple={false}
  selected={true}
  sizing="normal"
  style={Object {}}
  testing={true}
  theme={null}
  title="tab title"
  tooltip={null}
  top={null}
  visible={true}
  width={null}
  xcss={null}
>
  <Tab__TabView
    className="ui-tab ui-selected"
    disabled={false}
    minWidth="120px"
    orientation="top"
    selected={true}
    sizing="normal"
    style={Object {}}
    visible={true}
  >
    <Item
      backgroundColor={null}
      border={null}
      borderColor={null}
      bottom={null}
      className={null}
      color={null}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      hidden={false}
      hiddenLeftButton={false}
      hiddenRightButton={true}
      href={
        Object {
          "selectHandler": [Function],
        }
      }
      id={null}
      layout={5}
      left={null}
      leftButton={null}
      location="none"
      maxHeight={null}
      maxWidth={null}
      minHeight={null}
      minWidth="120px"
      noborder={false}
      noclose={false}
      noedit={false}
      nohover={false}
      nopropagation={false}
      notheme={false}
      notooltip={false}
      obj="Tab"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onClose={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onUpdate={[Function]}
      orientation="top"
      padding={null}
      rightButton={
        <Button
          backgroundColor={null}
          border={null}
          borderColor={null}
          bottom={null}
          className={null}
          color={null}
          controlled={true}
          direction="right"
          disabled={false}
          err={null}
          errorMessage={null}
          focus={false}
          height={null}
          hidden={false}
          href={
            Object {
              "selectHandler": [Function],
            }
          }
          iconName="times"
          iconStyle=""
          id={null}
          kbActivate=""
          left={null}
          location="none"
          maxHeight={null}
          maxWidth={null}
          minHeight={null}
          minWidth="120px"
          noborder={false}
          noclose={false}
          noedit={false}
          nohover={false}
          nopropagation={false}
          notheme={false}
          notooltip={false}
          obj="Tab"
          onClick={[Function]}
          onClose={[Function]}
          orientation="top"
          padding={null}
          ripple={false}
          selected={true}
          sizing="normal"
          style={Object {}}
          testing={true}
          theme={null}
          title="tab title"
          tooltip={null}
          top={null}
          visible={true}
          width={null}
          xcss={null}
        >
          Test content
        </Button>
      }
      ripple={false}
      selected={true}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      theme={null}
      title="tab title"
      tooltip={null}
      top={null}
      useedit={false}
      visible={true}
      widget={null}
      width={null}
      xcss={null}
    >
      Test content
    </Item>
  </Tab__TabView>
</Wrapper>
`;
